[package]
authors = ["Ivan Dardi <ivy.dardi@gmail.com>"]
build = "build.rs"
name = "compiler"
version = "0.1.0"

[build-dependencies]
lalrpop = { git = "https://github.com/nikomatsakis/lalrpop.git" }

[dependencies]
derive-error = "0.0.3"
lalrpop-util = { git = "https://github.com/nikomatsakis/lalrpop.git" }
regex = "0.2"
